# ntsc-cu

./: .gitignore  README.md  cli.py  ntsc.py  pyproject.toml
.github/workflows/: deploy.yml
src/ntsc-cu/: ntsc.py
src/ntsc_cu/: cli.py  ntsc.py  typing.py
src/ntsc_cu/filters/: ringing.py
src/ntsc_cu/utils/: __init__.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: app.tsx  i18n.ts  presets.ts  types.ts
web/src/components/: AxisControls.tsx  CropControl.tsx  Preview.tsx  ResizeControls.tsx
web/src/worker/: ntsc-worker.ts
